--- a/client/src/css/Home.module.css
+++ b/client/src/css/Home.module.css
@@ -16,3 +16,5 @@
     background-color: #00db0b;
     border-color: #285e8e; /*set the color you want here*/
 }
+
+.btn-outline-secondary  {border-radius: 50%;}
