--- a/client/src/css/SearchAutocomplete.module.css
+++ b/client/src/css/SearchAutocomplete.module.css
@@ -9,7 +9,7 @@
     position: relative;
     padding: 0.25rem;
     border-radius: 9999px;
-    width: 33.333333%;
+    width: 24%;
 }
 
 .input{
@@ -17,7 +17,7 @@
     padding: 0.5rem;
     padding-left: 1rem;
     border-radius: 9999px;
-    width: 100%;
+    /* width: 100%; */
 }
 
 .div2{
@@ -28,12 +28,12 @@
     top: 0px;
     left: 0px;
     border-width: 1px;
-    border-color: rgb(243 244 246);
+    border-color: rgb(15, 83, 218);
     background-color: rgb(255 255 255);
     overflow: hidden;
     border-radius: 0.5rem;
     box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-    z-index: 10;
+    /* z-index: 10; */
     /* display: flex;
     gap: 1rem;
     padding: 1rem; */
@@ -44,9 +44,11 @@
     gap: 1rem;
     padding: 1rem;
     text-decoration: none;
+    width: 100%;
 }
 .a:hover{
     background-color: rgb(147 197 253);
+    border-radius: 10px;
 }
 
 .img{
@@ -56,8 +58,8 @@
 }
 
 .img2{
-    width: 2px;
-    height: 2px;
+    /* width: .5px;
+    height: .5px; */
     object-fit: contain;
 }
 
