--- a/client/src/css/Carrousel.css
+++ b/client/src/css/Carrousel.css
@@ -1,3 +1,13 @@
-.cart_carrucel_jose{
-    box-shadow: blue, 2px, 10px, 10px;
+
+.card2 {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgb(96 164 209 / 10%);
+    border-radius: 7px;
+    box-shadow: rgb(199, 199, 216) 2px 10px 10px;
 }
