--- a/client/src/css/LoginScreen.css
+++ b/client/src/css/LoginScreen.css
@@ -1,10 +1,10 @@
-.containerr {
+/* .containerr {
     display: flex;
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
     width: 100%;
-    height: 90%;
+    height: 100%;
     background-color: rgb(241, 241, 241);
     padding: 0;
     
@@ -41,4 +41,12 @@
     .h-custom-2 {
       height: 70%;
     }
-  }
+  } */
+
+
+.bg{
+    background-image: url(https://i.postimg.cc/xdVc8YC2/login-igroup.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
