--- a/client/src/css/Carrousel.css
+++ b/client/src/css/Carrousel.css
@@ -11,3 +11,8 @@
     border-radius: 7px;
     box-shadow: rgb(199, 199, 216) 2px 10px 10px;
 }
+@media screen and (max-width: 768px) {
+    .cardisplay {
+        display: none;
+    }
+}
