Css Signin Screen Ok

--- a/client/src/css/SigninScreen.css
+++ b/client/src/css/SigninScreen.css
@@ -1,5 +1,5 @@
-.bg{
-    background-image: url(https://i.postimg.cc/xdVc8YC2/login-igroup.png);
+.bg2{
+    background-image: url(https://i.postimg.cc/jdLmcwsQ/signin-igroup.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
